<resources>
    <string name="app_name">TAUcoin</string>
    <string name="common_loading">loading&#8230;</string>
    <string name="common_no_login">Visitor</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_ok">OK</string>
    <string name="common_done">Done</string>
    <string name="common_back">Back</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_submit">Submit</string>
    <string name="common_continue">Continue</string>
    <string name="common_balance" formatted="false"><Data><![CDATA[<font color="#f19322">%s</font>&nbsp;TAU]]> </Data></string>
    <string name="common_exit" formatted="false">Do you want to stop mining?</string>
    <string name="common_balance_unit">TAU</string>
    <string name="common_zero_unit">0.00 TAU</string>
    <string name="common_zero">0</string>
    <string name="common_percentage_zero">0%</string>
    <string name="common_percentage">&#37;</string>
    <string name="common_refresh_failed">Refresh Failed</string>
    <string name="common_see_more">Click to see more</string>
    <string name="common_install_browser">Please install mobile browser first!</string>
    <string name="common_wifi_disconnected">WIFI connection time out</string>
    <string name="home_no_point">No.%s</string>
    <string name="home_total_blocks">Total Blocks</string>
    <string name="home_verify_blocks">Verify Blocks</string>
    <string name="home_hash_pair_sync">Hash Pair Sync (%d%%)</string>
    <string name="home_verify_percentage">Verify Percentage</string>
    <string name="home_tau_forked">TAU Forks Detected 1 ></string>
    <string name="home_tau_forked_text">TAU Forks Detected</string>
    <string name="home_tau_foundation">Foundation (&#8230;664e)</string>
    <string name="home_tau_foundation_text">Foundation chain is supported by TAU official development team.</string>
    <string name="splash_title">TAU mWallet %s</string>
    <string name="splash_subheading">Mobile Mining Wallet</string>
    <string name="splash_describe">Mobile &#038; Decentral\nProof of Transaction</string>
    <string name="main_home">Home</string>
    <string name="main_send_receive">Send &#38; Receive</string>
    <string name="main_manage">Manage</string>
    <string name="main_home_title">TAUcoin.io - Mobile Mining Wallet</string>
    <string name="main_exit">Click again to exit the application!</string>
    <string name="main_congratulation">Congratulation!</string>
    <string name="main_congratulation_msg">You\'ve successfully mined %s blocks, and %s TAU in the last %s hours!</string>
    <string name="tx_increase">Increase Power</string>
    <string name="tx_send">Send</string>
    <string name="tx_manager_address">Manage Keys</string>
    <string name="tx_receive">Receive</string>
    <string name="tx_log">Transactions</string>
    <string name="tx_log_empty">No records</string>
    <string name="tx_to_address">To Address</string>
    <string name="tx_from_address">From Address</string>
    <string name="tx_transaction_id">Transaction ID</string>
    <string name="tx_transaction_expiry">Transaction Expiry</string>
    <string name="tx_transaction_fee">Transaction Fee</string>
    <string name="tx_transaction_median_fee">Transaction Median Fee</string>
    <string name="tx_log_tips">
        &#160;Red font indicates a failed transaction,\n
        Blue font indicates a pending transaction,\n
        Black font indicates a successful transaction;\n
        \'+\' represents income,\n
        \'-\' represents payout
    </string>
    <string name="tx_hash_copy">TX hash copied</string>
    <string name="tx_address_copy">Address copied</string>
    <string name="tx_id_copy">Transaction ID copied</string>
    <string name="manager_version">version %s</string>
    <string name="manager_keys">Keys</string>
    <string name="manager_setting">Settings</string>
    <string name="manager_help">Help</string>
    <string name="manager_p2p_exchange">P2P &#38; Non&#045;KYC Exchange</string>
    <string name="manager_mining_group">Mining Group</string>
    <string name="manager_upcoming_feature">On IPFS native integration, Serverless Wallet, Sharding as Mining.</string>
    <string name="send_receiver_address">Receiver\'s Address</string>
    <string name="send_amount">Amount</string>
    <string name="send_budget">Budget</string>
    <string name="send_budget_hint">Amount for increasing power</string>
    <string name="send_amount_increase">Budget:</string>
    <string name="send_memo">Memo</string>
    <string name="send_status">Status</string>
    <string name="send_tx_fee_tip">The higher fee, the faster trx processing.</string>
    <string name="send_transaction_expiry" formatted="false"><Data><![CDATA[Transaction expires in <font color="#0E88EF">%s</font> (≈%s minutes) blocks.]]> </Data></string>
    <string name="send_to">To</string>
    <string name="send_dialog_spammer">Spammer</string>
    <string name="send_dialog_yes">Proceed</string>
    <string name="send_dialog_no">Back</string>
    <string name="send_tx_success">Transaction sent</string>
    <string name="send_txs_sending">Transaction in progress</string>
    <string name="send_tx_network_error">Error in network, send failed</string>
    <string name="send_tx_address">Receiver&#160;Address:&#160;%s</string>
    <string name="send_tx_increase_tip">Get more transaction number and mining power. Wallet automatically makes transaction under your Budget.</string>
    <string name="send_tx_increase_address">To:&#160;%s</string>
    <string name="send_tx_small_fee">0.01</string>
    <string name="send_tx_total_amount">Total:&#160;%s&#160;TAU</string>
    <string name="send_tx_budget_amount" formatted="false"><Data><![CDATA[Total:&nbsp;<font color="#f19322">%s</font>&nbsp;(Including each transaction fee)]]></Data></string>
    <string name="send_tx_invalid_address">Invalid Address</string>
    <string name="send_tx_invalid_amount">Invalid Amount</string>
    <string name="send_tx_invalid_budget">Invalid Budget</string>
    <string name="send_tx_invalid_budget_no_enough">Invalid Budget :\nBudget &#060; Transaction Fee</string>
    <string name="send_tx_invalid_fee">Invalid Transaction Fee</string>
    <string name="send_no_enough_coins">Insufficient Balance :\nAmount + Transaction Fee >= Balance</string>
    <string name="send_no_enough_coins_budget">Insufficient Balance :\nBudget > Balance</string>
    <string name="send_amount_too_low">Transaction amount is too low</string>
    <string name="send_budget_too_low">Transaction budget is too low</string>
    <string name="send_fee_too_low">Transaction fee is too low</string>
    <string name="send_fee_upper_limit">Transaction fees should not exceed %s TAU</string>
    <string name="send_budget_in_pool">TAU kindly remind you. There already has an increase power transaction in the pool. Sending frequently may increase the failure rate of the transaction.</string>
    <string name="send_tx_status_pending">In processing, expected to confirm in 5 minutes.</string>
    <string name="send_tx_status_success">Successfully</string>
    <string name="send_tx_status_expired">Failed, transaction expired.</string>
    <string name="send_tx_illegal">Failed, illegal transaction.</string>
    <string name="send_tx_insufficient_fee">Failed, insufficient transaction fee</string>
    <string name="send_tx_verify_signature">Failed, unable to verify signature</string>
    <string name="send_tx_insufficient_balance">Failed, insufficient balance</string>
    <string name="send_tx_illegal_version">Failed, illegal transaction version</string>
    <string name="send_tx_illegal_option">Failed, illegal transaction option</string>
    <string name="send_tx_illegal_expiry">Failed, illegal transaction expiry</string>
    <string name="send_tx_illegal_time">Failed, illegal transaction time</string>
    <string name="send_tx_illegal_sender">Burning address can not send coins</string>
    <string name="send_tx_unknown_error">Failed, network error, please try it again</string>
    <string name="keys_dialog_title">Please make sure your\nprivate key has been saved</string>
    <string name="keys_address">Address</string>
    <string name="keys_public_key">Public Key</string>
    <string name="keys_private_key">Private Key</string>
    <string name="keys_import_key">Import New Key</string>
    <string name="keys_import">Import</string>
    <string name="keys_generate">Generate New Private Key</string>
    <string name="keys_how_import">How to import my private key?</string>
    <string name="keys_paste_tip">Paste private key here</string>
    <string name="keys_address_copy">Address copied</string>
    <string name="keys_public_copy">Public Key copied</string>
    <string name="keys_private_copy">Private Key copied</string>
    <string name="keys_private_invalid">Invalid private key</string>
    <string name="profile_avatar">Avatar</string>
    <string name="profile_name">Name</string>
    <string name="profile_title">Profile</string>
    <string name="profile_select_photo">Choose from Album</string>
    <string name="profile_take_photo">Take Photo</string>
    <string name="profile_dialog_name">Please enter the name</string>
    <string name="app_upgrade_progress">Updating progress&#8230;</string>
    <string name="app_upgrade_title">Update Log</string>
    <string name="app_upgrade_install">Install</string>
    <string name="app_upgrade_fail">Failed</string>
    <string name="app_upgrade_retry">Retry</string>
    <string name="app_upgrade_latest">latest version</string>
    <string name="permission_tip_upgrade_denied">
         Please enable storage rights for TAUcoin, it is disabled.
    </string>
    <string name="permission_tip_upgrade_never_ask_again">
        Please enable storage rights for TAUcoin, it is forbidden now.
    </string>
    <string name="permission_install_unknown_apk_note">
        Please allow installation of TAUcoin.
    </string>
    <string name="home_mining_balance">Balance</string>
    <string name="home_mining_power">Mining\nPower</string>
    <string name="home_mining_rate">Mining&#160;Rate(Log)</string>
    <string name="home_mining_sync">Synced</string>
    <string name="home_mining">Mining</string>
    <string name="home_download">Download</string>
    <string name="home_verify">Verify</string>
    <string name="home_sync_tip">Synchronizing</string>
    <string name="home_on">On</string>
    <string name="home_off">Off</string>
    <string name="home_mining_dashboard">Mining Dashboard</string>
    <string name="home_mining_rank">Mining Rank</string>
    <string name="home_wifi_only">Wifi Only</string>
    <string name="home_current_mining">Current Mining</string>
    <string name="home_reward_analysis">Reward Analysis</string>
    <string name="setting_ipfs_info">IPFS Info</string>
    <string name="ipfs_id">ID</string>
    <string name="ipfs_version">Version</string>
    <string name="forum_post">Post</string>
    <string name="forum_post_title">Thread Post</string>
    <string name="forum_tau_community">TAU community</string>
    <string name="forum_topic_title_hint">An interesting title</string>
    <string name="forum_topic_text_hint">Your text post (optional)</string>
    <string name="forum_camera">Camera</string>
    <string name="forum_library">Library</string>
    <string name="forum_voice">Voice</string>
    <string name="forum_follow_more">More to come</string>
    <string name="forum_main_chain">TAU Main Chain</string>
    <string name="forum_follow_leave">Leave</string>
    <string name="forum_personal_name">u&#047;</string>
    <string name="forum_personal_telegram">TelegramID&#047;</string>
    <string name="forum_personal_info">Info&#047;</string>
    <string name="forum_figure_limit">In eight figures at most</string>
    <string name="forum_fee_tip">*More transaction fees more oppotunities be packaged miner.</string>
</resources>