<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_toStartOf="@+id/tv_leave"
            style="@style/style_normal_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/forum_main_chain"/>

        <TextView
            android:id="@+id/tv_leave"
            style="@style/style_normal_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:includeFontPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/grey_rect_round_bg"
            android:text="@string/forum_follow_leave"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_main_line"/>

    <TextView
        style="@style/style_normal_grey_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/forum_follow_more"/>

</LinearLayout>