<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rect_round_bg_no_border"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="25dp"
    android:paddingEnd="20dp"
    android:paddingBottom="35dp">

    <EditText
        android:id="@+id/edit_text"
        style="@style/style_normal_black"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColorHint="#A3A3A3"/>

    <TextView
        android:id="@+id/tv_error"
        android:visibility="invisible"
        style="@style/style_middle_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forum_figure_limit"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_normal_light_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_transaction_median_fee"/>

        <TextView
            android:id="@+id/tv_median_fee"
            style="@style/style_normal_light_grey"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        style="@style/style_small_grey_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/forum_fee_tip"/>

</LinearLayout>