<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@color/color_white"
    android:gravity="start"
    android:orientation="vertical">

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_normal_grey_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_personal_name"/>

        <TextView
            android:id="@+id/tv_name"
            style="@style/style_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_normal_grey_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_personal_telegram"/>

        <TextView
            android:id="@+id/tv_telegram"
            style="@style/style_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_normal_grey_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_personal_info"/>

        <TextView
            android:id="@+id/tv_info"
            style="@style/style_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>