<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_home_bg"
    android:orientation="vertical">

    <io.taucoin.android.wallet.widget.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftBackImage="@mipmap/icon_back_back"
        app:titleBackground="@color/color_tool_bar_child"
        app:titleText="@string/setting_ipfs_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_normal_light_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            android:text="@string/ipfs_id"/>

        <TextView
            android:id="@+id/tv_id"
            android:layout_marginStart="10dp"
            style="@style/style_normal_black"
            android:minHeight="44dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1231231231231231231231231231231231231231"/>

    </LinearLayout>

    <View
        android:background="@color/color_main_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_normal_light_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            android:text="@string/ipfs_version"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_marginStart="10dp"
            style="@style/style_normal_black"
            android:minHeight="44dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="go-ipfs v0.4.22"/>

    </LinearLayout>

    <View
        android:background="@color/color_main_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlAccentColor="#00000000"
        app:srlEnablePreviewInEditMode="true"
        app:srlPrimaryColor="#00000000">

        <io.taucoin.android.wallet.widget.refresh.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list_view_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/color_transparent"
            android:dividerHeight="0dp"
            android:scrollbars="none" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>